#
# component
#------------------------------------------------------------

#-------------------------------------------------------------------------------

#
# add directories
#-------------------------------------------------------------------------------
add_subdirectory(robot_controller)

#-------------------------------------------------------------------------------
